--- a/front/src/css/quasar.variables.scss
+++ b/front/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
+$primary   : orange;
 $secondary : #26A69A;
 $accent    : #9C27B0;
 
@@ -22,4 +22,4 @@ $dark-page : #121212;
 $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
-$warning   : #F2C037;
+$warning   : #ff6a00;
