--- a/front/src/css/quasar.variables.scss
+++ b/front/src/css/quasar.variables.scss
@@ -13,8 +13,8 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : orange;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$secondary : #767676;
+$accent    : #26A69A;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
